--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -183,6 +183,7 @@ p
 
   .name-wrapper
     background: #f32e3e
+    font-weight: 700
 
 .photo-item--2 .name-wrapper
   background: #E4358D
@@ -324,9 +325,10 @@ p
   -webkit-box-align: center
   -ms-flex-align: center
   align-items: center
+  font-weight: 700
 
 .review__date
-  opacity: .6
+  opacity: 1
   margin-left: 2vw
 
 .review__text
@@ -360,7 +362,7 @@ p
   text-align: center
   padding-bottom: 4.267vw
   font-weight: 700
-  color: #B62618
+  color: #fff
 .footer__bottom
   display: -webkit-box
   display: -ms-flexbox
